# libflipnote

./: CMakeLists.txt  README  flipnote.c  flipnote.h  flipview.c
